--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,8 @@ stages:
     - task: Docker@2
       displayName: Push image
       inputs:
-        containerRegistry: |
-          $(dockerHub)
+        containerRegistry: $(dockerHub)
         repository: $(imageName)
         command: push
         tags: |
-          test1
+          v1
