--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,8 +30,12 @@ stages:
     - task: Docker@2
       displayName: Push image
       inputs:
-        containerRegistry: 'gcr.io'
+        containerRegistry: |
+          $(dockerHub)
         repository: $(imageName)
         command: push
+        tags: |
+          test1
+          test2
         tags: |
           $(tag)
