--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,11 +28,13 @@ stages:
         tags: |
           $(tag)
     - task: Docker@2
-      displayName: Push image
+      displayName: 'Login to Container Registry'
       inputs:
-        containerRegistry: |
-          $(dockerHub)
-        repository: $(imageName)
-        command: push
-        tags: |
-          $(tag)
+        command: login
+        containerRegistry: 'gcr-tutorial'
+    - task: Docker@2
+      displayName: 'Build and push image'
+      inputs:
+        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        command: buildAndPush
+        repository: '$(DockerImageName)'
