--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,14 +27,8 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
-    - task: Docker@2
-      displayName: 'Login to Container Registry'
-      inputs:
-        command: login
-        containerRegistry: 'gcr-tutorial'
-    - task: Docker@2
-      displayName: 'Build and push image'
-      inputs:
-        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        command: buildAndPush
-        repository: '$(DockerImageName)'
+    steps:
+    - name: 'gcr.io/cloud-builders/docker'
+        args: ['build', '-t', 'gcr.io/bunbun1/webserver:v1', '.']
+    - name: 'gcr.io/cloud-builders/docker'
+        args: ['push', 'gcr.io/bunbun1/webserver:v1']
